test/types/range/lydia/badRange-string-upper.good
badRange-string-upper.chpl:1: In function 'main':
badRange-string-upper.chpl:2: error: Range bounds must be of compatible types (upper bound is not)
badRange-string-upper.chpl:2: error: lower bound and upper bound of param for loop expected to be of the same type
badRange-string-upper.chpl:2: error: upper bound and stride of param for loop expected to be of the same type
